--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 </div>
             </div>
             <div class="row">
-                <!--- pack 1 --->
+                <!--- pack 1 -->
                 <div class="col-md-4">
                     <div class="pack">
                         <div class="pack-title">
@@ -328,7 +328,7 @@
                         </div>
                     </div>
                 </div>
-                <!--- pack 2 --->
+                <!--- pack 2 -->
                 <div class="col-md-4">
                     <div class="pack pack-premium">
                         <div class="pack-title">
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                 </div>
-                <!--- pack 3 --->
+                <!--- pack 3 -->
                 <div class="col-md-4">
                     <div class="pack">
                         <div class="pack-title">
@@ -420,7 +420,7 @@
                             </div>
 
                             <div class="col-md-6">
-                                <div contact-form>
+                                <div class="contact-form">
                                     <label>Email :</label>
                                     <input type="email" id="email" placeholder="Ajoutez votre email" />
                                 </div>
